Fixed spacing Title

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -52,8 +52,8 @@ select{
 }
 
 #title h1{
-    font-size: 2.5vw;
-    margin-bottom: 0;
+    font-size: 2.3vw;
+    margin-bottom: 3px;
     margin-top: 5px;
 }
 
